[package]
name = "deml"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Martelle <matthew@martelle.dev>"]
license = "MIT OR Apache-2.0"
description = "The Directed Acyclic Graph Elevation Markup Language"
homepage = "https://github.com/Mcmartelle/deml"
repository = "https://github.com/Mcmartelle/deml"
readme = "README.md"
keywords = ["dag", "graph", "markup"]
categories = ["parser-implementations", "command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
dagrs = "0.2.0"
pest = "2.7.3"
pest_derive = "2.7.3"
